fix: spacing on mobile

--- a/src/styles/custom/sections/index/_newsletter.sass
+++ b/src/styles/custom/sections/index/_newsletter.sass
@@ -1,4 +1,4 @@
-$custom-height: 300px
+$custom-height: 350px
 
 .hero
     &-newsletter
@@ -25,6 +25,7 @@ $custom-height: 300px
 
                         @media screen and ( max-width: $tablet )
                             padding: $section-padding
+                            max-height: $custom-height
                         
                         h1
                             padding-bottom: 1em
